<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wolfyscript.wolfyutils.spigot</groupId>
    <artifactId>wolfyutils-parent</artifactId>
    <version>5.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>WolfyUtils-Spigot</name>

    <scm>
        <connection>scm:git:https://github.com/WolfyScript/WolfyUtils-Spigot.git</connection>
        <developerConnection>scm:git:https://github.com/WolfyScript/WolfyUtils-Spigot.git</developerConnection>
        <url>https://github.com/WolfyScript/WolfyUtils-Spigot.git</url>
    </scm>

    <modules>
        <module>core</module>
        <module>nmsutil</module>
        <module>plugin-compatibility</module>
        <module>wolfyutils-spigot</module>
    </modules>

    <properties>
        <java.version>16</java.version>
        <java.mc18.version>17</java.mc18.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <wolfyutils.api>5.0-SNAPSHOT</wolfyutils.api>
        <!-- Plugin versions -->
        <plugin_version.compile>3.10.1</plugin_version.compile>
        <plugin_version.shade>3.3.0</plugin_version.shade>
        <plugin_version.specialsource>1.2.4</plugin_version.specialsource>
        <plugin_version.license>2.0.0</plugin_version.license>
        <!-- The dependency versions -->
        <depend_version.spigotapi>1.19-R0.1-SNAPSHOT</depend_version.spigotapi>
        <depend_version.mojang-authlib>1.5.21</depend_version.mojang-authlib>
        <depend_version.jackson>2.14.0</depend_version.jackson>
        <depend_version.jetbrains-annotations>23.0.0</depend_version.jetbrains-annotations>
        <depend_version.netty>4.1.85.Final</depend_version.netty>
        <depend_version.guice>5.1.0</depend_version.guice>
        <depend_version.reflections>0.10.2</depend_version.reflections>
        <depend_version.bstats>3.0.0</depend_version.bstats>
        <depend_version.adventure-api>4.11.0</depend_version.adventure-api>
        <depend_version.adventure-platform>4.1.2</depend_version.adventure-platform>
        <depend_version.adventure-minimessage>4.11.0</depend_version.adventure-minimessage>
        <depend_version.nbt-api>2.11.0</depend_version.nbt-api>
        <depend_version.javassist>3.29.2-GA</depend_version.javassist>
        <depend_version.test.jupiter>5.9.0</depend_version.test.jupiter>
        <depend_version.test.mockito>4.8.0</depend_version.test.mockito>
        <depend_version.test.mockbukkit>2.85.2</depend_version.test.mockbukkit>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${plugin_version.compile}</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${plugin_version.shade}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>core/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
    <distributionManagement>
        <repository>
            <id>wolfyscript-admin</id>
            <name>Releases</name>
            <url>https://maven.wolfyscript.com/repository/releases/</url>
        </repository>
        <snapshotRepository>
            <id>wolfyscript-admin</id>
            <name>Snapshot</name>
            <url>https://maven.wolfyscript.com/repository/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!--
        WolfyScript private repo
        This repository requires you to have credentials to access private plugins.
        You can use the public repo and then provide your local installed  jars.

        Additionally, this repo is used as a proxy for all the other required repositories.
        In future that will probably be changed back, as it was mainly for download speed issues.
        The plugin compatibility modules already directly use the specific repos.

        Public repo: https://maven.wolfyscript.com/repository/public/
        -->
        <repository>
            <id>wolfyscript-private</id>
            <url>https://maven.wolfyscript.com/repository/private/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.18.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.wolfyscript.wolfyutils</groupId>
            <artifactId>wolfyutilities</artifactId>
            <version>${wolfyutils.api}</version>
            <scope>provided</scope>
        </dependency>
        <!-- - - - - -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${depend_version.jackson}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${depend_version.jetbrains-annotations}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>${depend_version.mojang-authlib}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${depend_version.netty}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>${depend_version.bstats}</version>
            <scope>provided</scope>
        </dependency>
        <!-- NBT -->
        <dependency>
            <groupId>de.tr7zw</groupId>
            <artifactId>item-nbt-api</artifactId>
            <version>${depend_version.nbt-api}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.tr7zw</groupId>
            <artifactId>nbt-data-api</artifactId>
            <version>${depend_version.nbt-api}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- - - - - -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${depend_version.jackson}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${depend_version.guice}</version>
            </dependency>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>${depend_version.reflections}</version>
            </dependency>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>${depend_version.javassist}</version>
            </dependency>
            <!-- Adventure ChatComponent API -->
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-api</artifactId>
                <version>${depend_version.adventure-api}</version>
            </dependency>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-platform-bukkit</artifactId>
                <version>${depend_version.adventure-platform}</version>
            </dependency>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-text-minimessage</artifactId>
                <version>${depend_version.adventure-minimessage}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
